--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "sqlalchemy (>=2.0.38,<3.0.0)",
     "alembic (>=1.15.1,<2.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "redis (>=5.2.1,<6.0.0)"
+    "redis (>=5.2.1,<6.0.0)",
+    "python-jose[cryptography] (>=3.4.0,<4.0.0)"
 ]
 
 [tool.poetry]
